--- a/docs/50_data_publication/30_licenses.mdx
+++ b/docs/50_data_publication/30_licenses.mdx
@@ -3,10 +3,22 @@ title: "Licenses"
 slug: "/licenses"
 ---
 
+import useBaseUrl from "@docusaurus/useBaseUrl";
 
-![Under Construction](/img/Constr_2bl.png)
+# Licenses
+
+This page is currently still under construction.
+
+In order to provide you with some helpful information until completion, we have compiled introductory links on this topic.
+
+- There is a brief overview of [choosing an open license](https://heidiseibold.ck.page/posts/choosing-an-open-license) as a researcher.
+- If you want to delve deeper into the topic of Creative Commons, you will find a good [overview](https://creativecommons.org/share-your-work/cclicenses/) with all the necessary information here
+- And for a comprehensive overview for chemists, you can read this [article by Thomas Hartmann](https://books.ub.uni-heidelberg.de/heibooks/catalog/book/979/chapter/13728) (in german)
+
+
+
 
 <!-- Copied from FAIR Article. This article is now linked from there. Please consider for this article. [Creative Commons](https://creativecommons.org/) licenses are commonly used for scientific data and this [license selection tool](https://creativecommons.org/choose/) can help researchers assign a license that fits their needs.-->
 
 
-This page is under construction.
+
