fix: use video privacy

--- a/docs/60_topics/63_data_description_annotation/20_ontology.mdx
+++ b/docs/60_topics/63_data_description_annotation/20_ontology.mdx
@@ -4,6 +4,7 @@ slug: "/ontology"
 ---
 
 import VideoPrivacy from "video-privacy";
+import useBaseUrl from "@docusaurus/useBaseUrl";
 
 :::info Summary:
 The term ontology, as used in our context, refers to a formally specified conceptualisation of a certain research domain that is focused on answering the question of what can and needs to be represented in this domain. An ontology thus defines a collection of technical terms that can be used to semantically describe research data in a _[FAIR](/docs/fair/)_ and machine-readable way by the means of annotating the research data with these technical terms. This is best done automatically behind the scenes by your everyday work apps like the _[ELN](/docs/eln/)_. However, as automated ontology-based annotation is not the standard yet, as ontologies evolve with the new insights gained from research, and, as they might contain term definitions which a domain expert (e.g. a chemist like you) might disagree with, knowing the core concepts of ontologies in ones research domain is helpful in a FAIR RDM context. To get an overview of different ontologies or to work with them, one can use different web services, such as the \*[NFDI4Chem Terminology Service](https://terminology.nfdi4chem.de/ts/index).
@@ -13,14 +14,14 @@ The term ontology, as used in our context, refers to a formally specified concep
 
 <VideoPrivacy
     imageUrl={useBaseUrl("/img/topics/ontologies_preview.webp")}
-    width={560}
-    info="YouTube uses cookies and stores personal data. To view embedded videos from YouTube, please indicate your consent to load this video from an external source."
+    width={800}
+    info="YouTube uses cookies and stores personal data. To view embedded videos from YouTube, please indicate your consent to load this video from anexternal source."
     buttonText="I agree"
     customButtonClass="button button--primary"
 >
     <iframe
-        width="560"
-        height="315"
+        width="800"
+        height="450"
         src="https://www.youtube.com/embed/b5c2oawLPU8"
         frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
