feat: eln-finder demo with props

--- a/docs/10_domains/10_analytical_chemistry.mdx
+++ b/docs/10_domains/10_analytical_chemistry.mdx
@@ -28,7 +28,7 @@ Some open data formats are available for specific data types, such as mass spect
 
 General chemistry ELNs can typically be used for analytical chemistry data and may be well suited to your research topic. However, there are also specialised tools that are tailored to the needs of analytical chemists. These tools often include features for managing instrument data, processing raw data files and visualising results. They may also include tools for chemometric analysis.
 
-<ElnFinder />
+<ElnFinder subDisc="Physical chemistry" />
 
 ## Publishing Data
 
