fix: broken anchors

--- a/docs/00_intro/10_fair.mdx
+++ b/docs/00_intro/10_fair.mdx
@@ -2,6 +2,7 @@
 title: "FAIR Data Principles"
 slug: "/fair"
 ---
+
 # FAIR Data Principles
 
 ![FAIR Data](/img/topics/FAIR_data_principles.png)
@@ -23,7 +24,6 @@ In chemistry, the deposition of crystallographic data in a standardized file for
 
 In the following, we answer the questions: What makes data FAIR? What do researchers and those who provide data preservation services need to consider?
 
-
 ## Findable
 
 Researchers — and the computers working on their behalf — must be able to find datasets to be able to reuse them. Therefore, the first guideline of the FAIR Data Principles outlines methods to ensure a dataset’s discovery.
@@ -38,11 +38,11 @@ A common example of a citable PID is the Digital Object Identifier, or [DOI](htt
 
 Data need to be sufficiently described in order to make them both findable and reusable. Hence, the specific focus here lies on making the (meta)data findable by using rich discovery [metadata](/docs/metadata) in a standardized format and allowing computers and humans to quickly understand the dataset’s contents. This is an essential component in the plurality of metadata described by [R1](#r1-metadata-are-richly-described-with-a-plurality-of-accurate-and-relevant-attributes) below. This information may include, but is not limited to:
 
-- the context on what the dataset is, how it was generated, and how it can be interpreted,
-- the data quality,
-- licensing and (re)use agreements,
-- what other data may be related (linked via its PID), and
-- associated journal publications and their DOI.
+-   the context on what the dataset is, how it was generated, and how it can be interpreted,
+-   the data quality,
+-   licensing and (re)use agreements,
+-   what other data may be related (linked via its PID), and
+-   associated journal publications and their DOI.
 
 Repositories should provide researchers with a fillable [application profile](https://en.wikipedia.org/wiki/Application_profile) that allows researchers to give extensive and precise information on their deposited datasets. For example, the Chemotion Repository uses, among others, the [Datacite Metadata Schema](http://doi.org/10.5438/0012) to build its application profile, a schema specifically created for the publication and citation of research data. [RADAR](https://radar.products.fiz-karlsruhe.de/en), including the variant [RADAR4Chem](https://www.nfdi4chem.de/index.php/2650-2/), has also built [its metadata schema](https://radar.products.fiz-karlsruhe.de/en/radarfeatures/radar-metadatenschema) on Datacite. These include an assortment of mandatory, recommended, and optional metadata properties, allowing for a rich description of the deposited dataset. For those publishing data, always keep in mind: the more information provided, the better.
 
@@ -106,17 +106,17 @@ Many of the previous points lead to one key aspect of data sharing: data reusabi
 
 Related to [F2](#f2-data-are-described-with-rich-metadata-defined-by-r1-below) above, the focus here lies on whether the data, once found, is useable to the person or computer searching. It also stresses giving the data as many attributes as possible. Researchers should not assume the person—or that person’s computer—looking to re(use) their data is completely familiar with the discipline. Examples of information to assign here include (non-exhaustive list):
 
-- What the dataset contains, including whether the data is raw and/or processed
-- How the data was processed
-- How the data can be reused
-- Who created the data
-- Date of creation
-- Variable names
-- Standard methods used
-- Scope of the data and project
-- Lab conditions
-- Any limitations to the data
-- Software and versions used for acquisition and processing.
+-   What the dataset contains, including whether the data is raw and/or processed
+-   How the data was processed
+-   How the data can be reused
+-   Who created the data
+-   Date of creation
+-   Variable names
+-   Standard methods used
+-   Scope of the data and project
+-   Lab conditions
+-   Any limitations to the data
+-   Software and versions used for acquisition and processing.
 
 An important piece of information for chemical data are [machine-readable chemical structures](/docs/machine-readable_chemical_structures). This should be included within the dataset and/or metadata and aids computers in finding the correct data in their queries.
 
@@ -141,8 +141,8 @@ Where required, format converters should be linked in the dataset’s metadata.
 
 ## Sources and further information
 
-- [FORCE 11: FAIR Data Principles](https://www.force11.org/group/fairgroup/fairprinciples)
-- [Go-FAIR initiative: FAIR Principles](https://www.go-fair.org/fair-principles/)
-- [TIB Blog: The FAIR Data Principles for Research Data](https://blogs.tib.eu/wp/tib/2017/09/12/the-fair-data-principles-for-research-data/)
-- [FAIRsFAIR: How to be FAIR with your data. A teaching and training handbook for higher education institutions](https://doi.org/10.5281/zenodo.6674301) & [Engelhardt et al. (book version)](10.17875/gup2022-1915) & [Gitbook version](https://fairsfair.gitbook.io/fair-teaching-handbook)
-- [Checklist: How FAIR are your data?](https://doi.org/10.5281/zenodo.1065991) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.1065991.svg)](https://doi.org/10.5281/zenodo.1065991) 
+-   [FORCE 11: FAIR Data Principles](https://www.force11.org/group/fairgroup/fairprinciples)
+-   [Go-FAIR initiative: FAIR Principles](https://www.go-fair.org/fair-principles/)
+-   [TIB Blog: The FAIR Data Principles for Research Data](https://blogs.tib.eu/wp/tib/2017/09/12/the-fair-data-principles-for-research-data/)
+-   [FAIRsFAIR: How to be FAIR with your data. A teaching and training handbook for higher education institutions](https://doi.org/10.5281/zenodo.6674301) & [Engelhardt et al. (book version)](https://doi.org/10.17875/gup2022-1915) & [Gitbook version](https://fairsfair.gitbook.io/fair-teaching-handbook)
+-   [Checklist: How FAIR are your data?](https://doi.org/10.5281/zenodo.1065991) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.1065991.svg)](https://doi.org/10.5281/zenodo.1065991)
