--- a/docs/50_data_publication/10_repositories.mdx
+++ b/docs/50_data_publication/10_repositories.mdx
@@ -25,7 +25,7 @@ Some, but not all, repositories curate and review the data before **ingestion** 
 
 In order to allow data reuse by other researchers, [metadata](/docs/metadata), including [provenance information](/docs/provenance/), are required beside the actual data. Metadata describe the research data and provide information about its creation, the methods or software used as well as legal aspects. Metadata can be either added manually via a metadata editor or can be provided through other applications. The process to manually add metadata via a metadata editor can be compared to the process of submitting a manuscript to a publisher via the publishers submission system.
 
-One main function of repositories is to provide a search function, with which users and machines can find, view, and download data. In order to ensure that data are permanently referenced and can be [linked and cited](/docs/best_practice/#how-to-use-dataset-pids-in-scientific-articles), repositories assign unique [persistent identifiers](/docs/pid) (PIDs). This also enhances the findability and accessibility of research data.
+One main function of repositories is to provide a search function, with which users and machines can find, view, and download data. In order to ensure that data are permanently referenced and can be [linked and cited](/docs/best_practice/), repositories assign unique [persistent identifiers](/docs/pid) (PIDs). This also enhances the findability and accessibility of research data.
 
 Repositories can also be certified (e.g. CoreTrustSeal). Such certification ensures that the data is citable, preserved in the long run, and may also cover aspects of data curation and data quality.
 
