--- a/docs/50_data_publication/50_data_availability_statement.mdx
+++ b/docs/50_data_publication/50_data_availability_statement.mdx
@@ -9,7 +9,7 @@ slug: "/data_availability_statement"
 
 The data availability statement or a similarly termed section, depending on the publisher, is part of the back matter of a manuscript. The back matter usually also contains information on conflicts of interest, author information, acknowledgements and the references.
 
-The data availability statement enhances findability and enables [linking of the manuscript](/docs/best_practice/#how-to-use-dataset-pids-in-scientific-articles) to the corresponding FAIR dataset in research data [repositories](/docs/repositories) via [PIDs](/docs/pid) such as DOIs, alternatively using the repository-specific identifiers or accession numbers.
+The data availability statement enhances findability and enables [linking of the manuscript](/docs/best_practice/) to the corresponding FAIR dataset in research data [repositories](/docs/repositories) via [PIDs](/docs/pid) such as DOIs, alternatively using the repository-specific identifiers or accession numbers.
 
 Depending on the publisher, the data availability statement may be directly added to the manuscript submitted or is automatically added during manuscript submission via the respective publishers submission system.
 
