chore: added link to Git

--- a/docs/10_domains/20_physical_chemistry.mdx
+++ b/docs/10_domains/20_physical_chemistry.mdx
@@ -21,17 +21,7 @@ From spectroscopic measurement data, imaging, to simulation input files and in-h
 
 ## What Type of Data?
 
-As mentioned, the data produced in physical chemistry and its diverse sub-disciples are varied. One research group may work intensively with imaging data such as superresolution microscopy, while the other may work on method development, and again others may analyze spectroscopic data or conduct numeric simulations—or even any combination of these. The [table](#methods-data-format-overview) below provides an overview of typical methods employed along with their data types and recommended open formats.
-
-<!-- should the above be more specific? --->
-
-### Methods Data Format Overview
-
-<!--are we still doing this table at all?-->
-
-<Methods defaultProfile={"physical"} />
-
-:::note \*This table will be continuously updated with new recommendations on interoperable open file formats.:::
+As mentioned, the data produced in physical chemistry and its diverse sub-disciples are varied. One research group may work intensively with imaging data such as superresolution microscopy, while the other may work on method development, and again others may analyze spectroscopic data or conduct numeric simulations—or even any combination of these.
 
 ## What ELNs/Tools?
 
@@ -41,7 +31,7 @@ An [electronic lab notebooks (ELNs)](docs/eln) helps in the day-to-day planning 
 
 In addition to ELNs, tools such as local repository and research dat management tools can assist in making data publication ready.
 
-For those writing scripts and developing research software solutions, git is a highly recommended versioning tool. May universities also have their own instances of [GitLab](https://about.gitlab.com/) to assist in managing software projects.
+For those writing scripts and developing research software solutions, [Git](https://git-scm.com/) is a highly recommended versioning tool. May universities also have their own instances of [GitLab](https://about.gitlab.com/) to assist in managing software projects.
 
 Specifically for research data, [DataLad](https://www.datalad.org/), which is built on top of git, can greatly assist in tracking the metadata while processing and analyzing data. While it works for steps carried out with GUI applications, its true power comes in handy for those using script-based analysis and processing steps.
 
