fix: eln-finder import

--- a/docs/10_domains/20_physical_chemistry.mdx
+++ b/docs/10_domains/20_physical_chemistry.mdx
@@ -3,8 +3,8 @@ title: "Physical and Computational Chemistry"
 slug: "/physical_chemistry"
 ---
 
-import Methods from "@site/src/components/Methods.js";
 import { LbeChip } from "@site/src/components/lbe/LbeElements.js";
+import ElnFinder from "@site/src/components/eln/ElnFinder.js";
 
 <LbeChip title="physical chemistry" />
 <LbeChip title="cheminformatics" />
