fix: legal notice / privacy links

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -4,7 +4,6 @@ title: About
 slug: /about
 ---
 
-
 # About
 
 The NFDI4Chem Knowledge Base is hosted by the Johannes Gutenberg University Mainz.
@@ -18,5 +17,5 @@ Department of Chemistry<br/>
 Germany<br/>
 Mail: [nfdi4chem@uni-mainz.de](mailto:nfdi4chem@uni-mainz.de)
 
-[Legal Notice](https://www.uni-mainz.de/eng/102.php)<br/>
-[Privacy](https://www.uni-mainz.de/eng/144.php)
+[Legal Notice](imprint)<br/>
+[Privacy](https://www.uni-mainz.de/en/privacy/)
