fix: line breaks

--- a/src/pages/imprint.mdx
+++ b/src/pages/imprint.mdx
@@ -1,19 +1,21 @@
 ---
-title: Imprint
+title: Legal Notice
 slug: /imprint
 ---
 
+# Legal Notice
+
 ## Editor
 
-Johannes Gutenberg University Mainz
-Saarstraße 21
+Johannes Gutenberg University Mainz  
+Saarstraße 21  
 55122 Mainz
 
-phone: +49 6131 39-0
+phone: +49 6131 39-0  
 email: registratur@uni-mainz.de
 
-VAT ID: DE 149 065 685
-Johannes Gutenberg University Mainz is a public corporation.
+VAT ID: DE 149 065 685  
+Johannes Gutenberg University Mainz is a public corporation.  
 It is legally represented by its President, Professor Georg Krausch.
 
 ## Competent supervisory authority
@@ -25,12 +27,12 @@ Mittlere Bleiche 61
 
 ## Editorial staff
 
-Department of Chemistry  
+Department of Chemistry / NFDI4Chem  
 Mail: nfdi4chem@uni-mainz.de
 
 ## Webmaster
 
-Technical questions and suggestions concerning the operation of this website should be directed to the JGU webmaster. Please always include the relevant URL.
+Technical questions and suggestions concerning the operation of this website should be directed to the JGU webmaster. Please always include the relevant URL.  
 email: nfdi4chem@uni-mainz.de
 
 ## Accessibility
