--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -10,12 +10,12 @@ The NFDI4Chem Knowledge Base is hosted by the Johannes Gutenberg University Main
 
 ## Responsible Spokesperson
 
-Dr. Johannes Liermann<br/>
-Johannes Gutenberg University Mainz<br/>
-Department of Chemistry<br/>
-55099 Mainz<br/>
-Germany<br/>
+Dr. Johannes Liermann  
+Johannes Gutenberg University Mainz  
+Department of Chemistry  
+55099 Mainz  
+Germany  
 Mail: [nfdi4chem@uni-mainz.de](mailto:nfdi4chem@uni-mainz.de)
 
-[Legal Notice](imprint)<br/>
+[Legal Notice](imprint)  
 [Privacy](https://www.uni-mainz.de/en/privacy/)
