fix: imprint urls

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -17,5 +17,5 @@ Department of Chemistry
 Germany  
 Mail: [nfdi4chem@uni-mainz.de](mailto:nfdi4chem@uni-mainz.de)
 
-[Legal Notice](imprint)  
+[Legal Notice](/imprint)  
 [Privacy](https://www.uni-mainz.de/en/privacy/)
